create docker compos db

--- a/.env
+++ b/.env
@@ -5,4 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-DATABASE_URL="file:./sorayut_dev.db"
+#DATABASE_URL="file:./sorayut_dev.db"
+
+DATABASE_USER=sorayut
+DATABASE_PASSWORD=sorayutpass
+DATABASE_NAME=sorayut_dev
+DATABASE_PORT=55876
