--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sorayut-nookaew/rmutp_s1_68.git"
@@ -19,7 +18,9 @@
   },
   "homepage": "https://github.com/sorayut-nookaew/rmutp_s1_68#readme",
   "dependencies": {
-    "@prisma/client": "^6.13.0",
-    "prisma": "^6.13.0"
+    "@prisma/client": "^6.14.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.14.0"
   }
 }
