--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/sorayut-nookaew/rmutp_s1_68#readme",
   "dependencies": {
-    "@prisma/client": "^6.14.0"
+    "@prisma/client": "^6.14.0",
+    "hono": "^4.9.2"
   },
   "devDependencies": {
     "prisma": "^6.14.0"
