--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sorayut-nookaew/rmutp_s1_68#readme",
   "dependencies": {
+    "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.14.0",
     "hono": "^4.9.2"
   },
