--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@hono/node-server": "^1.19.0",
     "@prisma/client": "^6.14.0",
-    "hono": "^4.9.2"
+    "hono": "^4.9.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "prisma": "^6.14.0"
